--- a/src/components/Profile/Profile_info/ProfileInfo.module.css
+++ b/src/components/Profile/Profile_info/ProfileInfo.module.css
@@ -1,3 +1,10 @@
 .descriptionBlock {
     padding: 20px;
 }
+.image {
+    display: flex;
+}
+.image img {
+    flex-basis: 100%;
+    height: auto;
+}
