Подключила Bootstrap 4, добавлены ajax-запросы и вынесены на dal-уровень

--- a/src/components/Friends/Friends.module.css
+++ b/src/components/Friends/Friends.module.css
@@ -1,4 +1,13 @@
 .usersPhoto {
-    width: 100px;
+    width: 140px;
     border-radius: 150px;
+    padding-bottom: 20px;
+}
+
+.selectedPage {
+    font-weight: bold;
+}
+
+.info, .followingButtons {
+    padding-left: 20px;
 }
