--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,13 @@
     "n c";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  grid-gap: 2px;
+  grid-gap: 5px;
+  margin: 10px;
 }
 
 .app-wrapper__content {
   grid-area: c;
-  background-color: #ff7f50;
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid  #ff7f50;
 }
