--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,14 +11,14 @@
 
 .dialog a {
     text-decoration: none;
-    color: white;
+    color: black;
     padding: 20px;
 }
 
 .messages {
     padding: 10px;
     margin: 5px;
-    color: white;
+    color: black;
 }
 
 .dialogsItems img {
