--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,14 +1,23 @@
 .nav {
+  display: flex;
+  justify-content: center;
   grid-area: n;
-  background-color: #ff7f50;
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid  #ff7f50;
 }
 
 ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   list-style-type: none;
+  padding: 0;
 }
 
 .items {
-  color: white;
+  color: black;
+  font-size: 16px;
   text-decoration: none;
 }
 
